# PyroCore

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
data/: sample.csv
src/cpp/: bindings.cpp  filter.cpp  stats.cpp
src/python/: engine.py  loader.py  visualizer.py
